--- a/application/templates/partials/header.mustache
+++ b/application/templates/partials/header.mustache
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="{{baseurl}}css/normalize.css">
         <link rel="stylesheet" href="{{baseurl}}css/main.css">
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+        <link href='http://fonts.googleapis.com/css?family=Snippet' rel='stylesheet' type='text/css'>
         <script src="{{baseurl}}js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
