--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,12 @@ html body select{font-family:'Snippet',sans-serif}
 header{text-align:center;width:100%;height:458px;background:url("../images/weightrace.png");-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;margin-top:50px;}
 header h1{margin-top:0;color:#555;font-weight:normal;font-size:18px;text-transform:lowercase;padding:10px;}
 header h1 em{font-style:normal;font-weight:bold}
+header#view{height:180px;}
+header#view h1 strong{display:block;text-transform:none;font-size:40px}
+header#view p{font-size:20px}
 nav{position:fixed;top:0;width:100%;line-height:30px;height:50px;color:#ccc;font-family:'Arial',sans-serif;z-index:1000;font-size:12px;text-shadow:0 1px 1px #000;background:#2d3033;background:-moz-linear-gradient(top,#2d3033 0%,#0f0f0f 100%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#2d3033),color-stop(100%,#0f0f0f));background:-webkit-linear-gradient(top,#2d3033 0%,#0f0f0f 100%);background:-o-linear-gradient(top,#2d3033 0%,#0f0f0f 100%);background:-ms-linear-gradient(top,#2d3033 0%,#0f0f0f 100%);background:linear-gradient(to bottom,#2d3033 0%,#0f0f0f 100%);-webkit-box-shadow:0 0 10px 0 rgba(0,0,0,0.4);box-shadow:0 0 10px 0 rgba(0,0,0,0.4);}
 nav p{float:left;display:inline-block;line-height:50px;margin:0;margin-left:10px}
+nav p:nth-of-type(2){float:right;margin-right:10px}
 nav form{margin-right:10px;height:50px;float:right;}
 nav form label{display:none}
 nav form input{min-height:25px;max-height:25px;width:130px;-webkit-border-radius:5px;border-radius:5px;border:1px solid #333;background-color:#333;-webkit-box-shadow:0 0 1px 1px #000,inset 0 -1px 5px 1px #000;box-shadow:0 0 1px 1px #000,inset 0 -1px 5px 1px #000;font-size:12px;font-family:'Arial',sans-serif;color:#bbb;padding:2px;display:inline-block;padding:0;margin:0;margin-left:10px;margin-top:12px;padding-left:5px;padding-right:5px}
