--- a/css/site.styl
+++ b/css/site.styl
@@ -31,6 +31,15 @@ header
         em
             font-style normal
             font-weight bold
+header#view
+    height 180px
+    h1
+        strong
+            display block
+            text-transform none
+            font-size 40px
+    p
+        font-size 20px
 nav
     position fixed
     top 0px
@@ -57,6 +66,9 @@ nav
         line-height 50px
         margin 0px
         margin-left 10px
+    p:nth-of-type(2)
+        float right
+        margin-right 10px
     form
         margin-right 10px
         height 50px
