--- a/application/templates/race/create.mustache
+++ b/application/templates/race/create.mustache
@@ -12,7 +12,7 @@
             Email:
         </label>
         <input type="text" name="email" value="Type your email...">
-        <input type="submit" value="Send me my login">
+        <input type="submit" name="submit" value="Send me my login">
     </form>
 </nav>
 <section id="register">
